[project]
name = "st-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.5",
    "pycairo>=1.28.0",
    "scikit-image>=0.25.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "snakeviz>=2.2.2",
]
